test_programs/compile_failure/noirc_frontend_tests_resolve_literal_expr/src/main.nr

        fn main(x : Field) {
            let y = 5;
            assert(y == x);
        }
    